# TradeSW-RD-Quant

./: .gitignore  .pre-commit-config.yaml  BUDGET_DEADLINE.txt  MANDATE_ECONOPHYSIQUE.md  Makefile  README.md  effort_log.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: mandate_guard.yml
archives/: phase1_verdict_2026-06-10.md  phase2a_verdict_hurst_2026-06-11.md
config/: mandate_scope.yml
docs/: BRANCH_PROTECTION_SETUP.md  STATE.md
scripts/: deploy_vps_dev.sh  refresh_data.py  run_backtest.py  run_hurst_backtest.py
scripts/hooks/: check_mandate_scope.py  check_mandate_scope.sh
src/: __init__.py  backtest_engine.py  garch_model.py  hurst_backtest.py  hurst_metrics.py  hurst_model.py  hurst_reporting.py  ingestion.py  metrics.py  reporting.py  vol_targeting.py
tests/: conftest.py  test_fees_drag.py  test_garch_fit.py  test_hurst_metrics.py  test_hurst_model.py  test_hurst_no_lookahead.py  test_load_spy.py  test_max_dd.py  test_rmse_vol.py  test_sharpe.py  test_vol_target_sizing.py  test_walk_forward_no_lookahead.py
tests/hooks/: test_check_mandate_scope.py
