[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradesw-rd-quant"
version = "0.1.0"
description = "TradeSW R&D Quant Phase 1 - GARCH(1,1) overlay backtest on S&P 500"
requires-python = ">=3.13"
readme = "README.md"
authors = [{ name = "Codex Dev-Agent (mandate Chef Swizman)" }]
dependencies = [
    "arch>=7.2.0",
    "yfinance>=0.2.50",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "matplotlib>=3.9.0",
    "pyarrow>=18.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "pandas-stubs>=2.2.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["arch.*", "yfinance.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing -v"
testpaths = ["tests"]
